@@ -1,6 +1,7 @@
 package com.buddy.api.domains.pet.services.impls;
 
 import com.buddy.api.domains.pet.dtos.PetSearchCriteriaDto;
+import com.buddy.api.domains.pet.entities.PetEntity;
 import com.buddy.api.domains.pet.mappers.PetDomainMapper;
 import com.buddy.api.domains.pet.repositories.PetRepository;
 import com.buddy.api.domains.pet.services.FindPet;
@@ -8,10 +9,13 @@ import com.buddy.api.domains.specifications.PetSpecifications;
 import com.buddy.api.web.pets.requests.PetSearchCriteriaRequest;
 import java.util.List;
 import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
+import org.hibernate.Hibernate;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -21,17 +25,29 @@ public class FindPetImpl implements FindPet {
     private final PetDomainMapper mapper;
 
     @Override
-    public Page<PetSearchCriteriaDto> findPets(PetSearchCriteriaRequest searchParams,
-                                               Pageable pageable) {
-        return petRepository.findAll(PetSpecifications.withParams(searchParams), pageable)
-                .map(mapper::mapParamsToDto);
+    @Transactional(readOnly = true)
+    public Page<PetSearchCriteriaDto> findPets(PetSearchCriteriaRequest searchParams, Pageable pageable) {
+        Page<PetEntity> petPage = petRepository.findAll(PetSpecifications.withParams(searchParams), pageable);
+        petPage.forEach(this::initializeProxies);
+        return petPage.map(mapper::mapParamsToDto);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<PetSearchCriteriaDto> findAllPets(PetSearchCriteriaRequest searchParams) {
-        return petRepository.findAll(PetSpecifications.withParams(searchParams))
-                .stream()
+        List<PetEntity> petEntities = petRepository.findAll(PetSpecifications.withParams(searchParams));
+        petEntities.forEach(this::initializeProxies);
+        return petEntities.stream()
                 .map(mapper::mapParamsToDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private void initializeProxies(PetEntity pet) {
+        if (pet.getImages() != null) {
+            Hibernate.initialize(pet.getImages());
+        }
+        if (pet.getShelter() != null) {
+            Hibernate.initialize(pet.getShelter());
+        }
     }
 }
